--- a/prepare_data_.ipynb
+++ b/prepare_data_.ipynb
@@ -2,25 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from DataPreperation import DataPreperation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/philipp/Seagate\\ Desktop\\ Drive/2017/2017460_salzburg_lb_rgbi.img\n",
+      "/home/philipp/Data/GIS/GIS_grid/traun/traun_3200_02m\n",
+      "/mnt/data_2/2017_traun/\n"
+     ]
+    }
+   ],
    "source": [
-    "##########\n",
-    "# seagate\n",
-    "##########\n",
+    "#########\n",
+    "# INPUT #\n",
+    "#########\n",
     "\n",
     "year = 2017\n",
     "ortho_name = 'salzburg'\n",
+    "region_name = 'traun'\n",
+    "clip = 3200\n",
+    "typ = 'ortho'\n",
+    "\n",
+    "path_out_dir = \"/mnt/data_2/\"\n",
+    "\n",
+    "################################\n",
+    "### raster - ortho - seagate ###\n",
+    "################################\n",
     "\n",
     "base_path = '/media/philipp/Seagate\\ Desktop\\ Drive/'\n",
     "\n",
@@ -47,64 +67,44 @@
     "    'bischofshofen':'2018250_bischofshofen_lb_rgbi.img',},\n",
     "    2019:{'innsbruck':'2019370_innsbruck_lb_rgbi.img',}}\n",
     "\n",
-    "path_in_raster = '{}{}/{}'.format(base_path, year, ortho_dict[year][ortho_name])"
+    "path_in_raster = '{}{}/{}'.format(base_path, year, ortho_dict[year][ortho_name])\n",
+    "\n",
+    "\n",
+    "#######################\n",
+    "### vector  -  grid ###\n",
+    "#######################\n",
+    "\n",
+    "path_in_vector = \"/home/philipp/Data/GIS/GIS_grid/{}/{}_{}_02m\".format(region_name, region_name, clip)\n",
+    "\n",
+    "path_out = \"{}{}_{}/\".format(path_out_dir, year, region_name)\n",
+    "\n",
+    "print(path_in_raster)\n",
+    "print(path_in_vector)\n",
+    "print(path_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/media/philipp/Seagate\\\\ Desktop\\\\ Drive/2017/2017460_salzburg_lb_rgbi.img'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no\n"
+     ]
     }
    ],
    "source": [
-    "path_in_raster"
+    "# check if path exists if not create it\n",
+    "if not(os.path.isdir(path_out)):\n",
+    "    os.makedirs(path_out)\n",
+    "    \n",
+    "dp = DataPreperation(path_out)\n",
+    "# clip raster by grid\n",
+    "dp.clip_by_grid(path_in_grid, path_in_raster, path_out_dir, typ)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_in_grid = '/home/philipp/Data/GIS/GIS_grid/traun/3200_02m.shp'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/philipp/Data/GIS/GIS_grid/traun/3200_02m.shp'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dp = DataPreperation('/mnt/data_2/2017_mariazell_boundry/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -47789,7 +47789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
