added rasterizing ground truth

--- a/prepare_data_.ipynb
+++ b/prepare_data_.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,22 +29,25 @@
     "#########\n",
     "\n",
     "year = 2017\n",
-    "ortho_name = 'mariazell' # salzburg\n",
-    "region_name = 'mariazell'   # traun\n",
-    "clip = 512\n",
+    "ortho_name = 'salzburg' # salzburg, mariazell\n",
+    "region_name = 'traun'   # traun, mariazell\n",
+    "tile_size = 512\n",
     "target_resolution = 0.2\n",
     "\n",
     "typ = 'ortho'\n",
     "\n",
-    "path_out_dir = \"/mnt/data_2/\"\n",
+    "# current resolution of input data\n",
+    "current_resolution = {'ortho':0.2, 'dsm':1, 'dtm':1, 'slope':1}\n",
     "\n",
     "dtm_tiles = ['000', '016'] # ['015', '037', '071', '075', '099', '120']\n",
-    "dtm_tile = dtm_tiles[1]"
+    "dtm_tile = dtm_tiles[1]\n",
+    "\n",
+    "path_out_dir = \"/mnt/data_2/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -53,9 +56,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/media/philipp/Seagate\\ Desktop\\ Drive/2017/2017360_mariazell_lb_rgbi.img\n",
-      "/mnt/data_2/2017_mariazell/vector/grid/512_02m/mariazell_512_02m.shp\n",
-      "/mnt/data_2/2017_mariazell/\n",
+      "-------------------------------------------------------------------------------\n",
+      "/media/philipp/Seagate\\ Desktop\\ Drive/2017/2017460_salzburg_lb_rgbi.img\n",
+      "/mnt/data_2/2017_traun/vector/grid/512_02m/traun_512_02m.shp\n",
+      "/mnt/data_2/2017_traun/\n",
       "-------------------------------------------------------------------------------\n"
      ]
     }
@@ -63,7 +67,7 @@
    "source": [
     "############################################################################################\n",
     "# add suffix for prediction\n",
-    "if clip == 3200:\n",
+    "if tile_size == 3200:\n",
     "    region_dir = region_name + '_predict'\n",
     "else:\n",
     "    region_dir = region_name\n",
@@ -100,33 +104,53 @@
     "\n",
     "    path_in_raster = '{}{}/{}'.format(base_path, year, ortho_dict[year][ortho_name])\n",
     "    \n",
-    "    path_in_vector = \"{}{}_{}/vector/grid/{}_02m/{}_{}_02m.shp\".format(path_out_dir, year, region_dir, clip, region_name, clip)\n",
+    "    path_in_vector = \"{}{}_{}/vector/grid/{}_02m/{}_{}_02m.shp\".format(path_out_dir, year, region_dir, tile_size, region_name, tile_size)\n",
     "\n",
     "##################################\n",
     "### raster - dsm | dtm | slope ###\n",
     "##################################\n",
     "elif typ == 'dsm':\n",
     "    path_in_raster = \"/mnt/data_1/dsm/ndom_oa.tif\"\n",
-    "    path_in_vector = \"{}{}_{}/vector/grid/{}_02m/{}_{}_02m.shp\".format(path_out_dir, year, region_dir, clip, region_name, clip)\n",
+    "    path_in_vector = \"{}{}_{}/vector/grid/{}_02m/{}_{}_02m.shp\".format(path_out_dir, year, region_dir, tile_size, region_name, tile_size)\n",
     "\n",
     "elif typ == 'dtm':\n",
     "    path_in_raster = \"/mnt/data_1/dtm/dtm_{}.tif\".format(dtm_tile)\n",
-    "    path_in_vector = \"{}{}_{}/vector/grid/dtm/{}_{}_02m_{}.shp\".format(path_out_dir, year, region_dir, region_name, clip, dtm_tile)\n",
+    "    path_in_vector = \"{}{}_{}/vector/grid/dtm/{}_{}_02m_{}.shp\".format(path_out_dir, year, region_dir, region_name, tile_size, dtm_tile)\n",
     "\n",
     "elif typ == 'slope':\n",
     "    path_in_raster = \"/mnt/data_1/slope/slope_{}.tif\".format(dtm_tile)\n",
-    "    path_in_vector = \"{}{}_{}/vector/grid/dtm/{}_{}_02m_{}.shp\".format(path_out_dir, year, region_dir, region_name, clip, dtm_tile)\n",
+    "    path_in_vector = \"{}{}_{}/vector/grid/dtm/{}_{}_02m_{}.shp\".format(path_out_dir, year, region_dir, region_name, tile_size, dtm_tile)\n",
     "\n",
-    "#path_in_vector = \"{}{}_{}/vector/grid/{}_02m/{}_{}_02m.shp\".format(path_out_dir, year, region_dir, clip, region_name, clip)\n",
+    "#path_in_vector = \"{}{}_{}/vector/grid/{}_02m/{}_{}_02m.shp\".format(path_out_dir, year, region_dir, tile_size, region_name, tile_size)\n",
     "\n",
     "path_out = \"{}{}_{}/\".format(path_out_dir, year, region_dir)\n",
+    "\n",
+    "print(\"-------------------------------------------------------------------------------\")\n",
     "\n",
     "print(path_in_raster)\n",
     "print(path_in_vector)\n",
     "print(path_out)\n",
     "\n",
-    "print(\"-------------------------------------------------------------------------------\")\n",
-    "\n",
+    "# check if path exists if not create it\n",
+    "if not(os.path.isdir(path_out)):\n",
+    "    os.makedirs(path_out)\n",
+    "    \n",
+    "print(\"-------------------------------------------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### clip  tiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# initialise\n",
     "dp = DataPreperation(path_out)\n",
     "# clip raster by grid\n",
@@ -137,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### align tiles in diffrent spatial resolution"
+    "### align tiles ito target spatial resolution"
    ]
   },
   {
@@ -9069,14 +9093,8 @@
     }
    ],
    "source": [
-    "# check if path exists if not create it\n",
-    "if not(os.path.isdir(path_out)):\n",
-    "    os.makedirs(path_out)\n",
-    "\n",
-    "# initialise\n",
-    "dp = DataPreperation(path_out)\n",
-    "# clip raster by grid\n",
-    "dp.clip_by_grid(path_in_vector, path_in_raster, path_out, typ)"
+    "# align raster to 0.2m\n",
+    "dp.align_tiles(path_out, data_type=typ)"
    ]
   },
   {
@@ -9088,19 +9106,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path of vector\n",
+    "path_shp = \"{}{}_{}/vector/data/{}.shp\".format(path_out_dir, year, region_dir, region_dir)\n",
+    "\n",
+    "# path to ground truth vector\n",
+    "path_gt = \"{}{}_{}/vector/ground_truth/{}_gt_df.shp\".format(path_out_dir, year, region_dir, region_dir)\n",
+    "\n",
+    "# read data\n",
+    "data_geo = gpd.read_file(path_shp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# std\n",
+    "# conditions 0 = void, 1 = thinning (ac1+2), 2 = no thinning, 3 = else\n",
+    "conditions = [\n",
+    "    # rest\n",
+    "    (data_geo['non_forest'] == 3) | (data_geo['non_forest'] == 7) | \\\n",
+    "    (data_geo['non_forest'] == 8) | (data_geo['non_forest'] == 9) | \\\n",
+    "    (data_geo['non_forest'] == 10), \\\n",
+    "    # thinning\n",
+    "    (data_geo['ww_sw'] == 'W') & \\\n",
+    "    (data_geo['economy'] == 'I') & \\\n",
+    "    (data_geo['age'] <= data_geo['uz']-20) & \\\n",
+    "    (data_geo['dr'] != 3) & \\\n",
+    "    (data_geo['dr'] > 0), \\\n",
+    "    # no thinning\n",
+    "    (data_geo['dr'] == 0) | (data_geo['dr'] == 3)]\n",
+    "\n",
+    "choices = [3, 1, 2]\n",
+    "\n",
+    "# apply conditions to geo data\n",
+    "data_geo['type'] = np.select(conditions, choices, default=2)\n",
+    "\n",
+    "# write to disk\n",
+    "data_geo[['type', 'geometry']].to_file(path_gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_type' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_11248/551558112.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mname_layer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"type\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mdgt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_raster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_out\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath_gt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname_vector\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname_layer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ground_truth_std\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpixel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtarget_resolution\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Code/python/edin_data_prep/DataGroundTruth.py\u001b[0m in \u001b[0;36mcreate_raster\u001b[0;34m(self, path_dir, path_shp, name_vector, name_layer, dir_out, pixel, file_paths)\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m         \u001b[0;31m# check if path exists if not create it\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_dir_out\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdata_type\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msufix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m             \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_dir_out\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdata_type\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msufix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_type' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# initialise\n",
     "dgt = DataGroundTruth(path_out)\n",
     "\n",
     "# ground truth\n",
-    "path_shp = \"{}{}_{}/vector/ground_truth/{}_gt_df.shp\".format(path_out_dir, year, region_dir, region_dir)\n",
     "name_vector = \"{}_gt_df\".format(region_dir)\n",
-    "name_layer = \"typ_std\"\n",
+    "name_layer = \"type\"\n",
     "\n",
-    "dgt.create_raster(path_out, path_shp, name_vector, name_layer, \"ground_truth_boundry\", pixel=target_resolution)"
+    "dgt.create_raster(path_out, path_gt, name_vector, name_layer, \"ground_truth_std\", pixel=target_resolution)"
    ]
   },
   {
