--- a/prepare_data_.ipynb
+++ b/prepare_data_.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import h5py\n",
+    "import numpy as np\n",
     "from DataPreperation import DataPreperation\n",
-    "from DataGroundTruth import DataGroundTruth"
+    "from DataGroundTruth import DataGroundTruth\n",
+    "from DatasetCreation import DatasetCreation\n",
+    "from DatasetCreation import DatasetStats"
    ]
   },
   {
@@ -25175,15 +25179,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file not found -> creating file\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/data_2/dataset/dataset_256_df_pinzgau.h5'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dsc = DatasetCreation(path_out)\n",
     "\n",
     "#########\n",
     "# Input #\n",
     "#########\n",
+    "\n",
+    "tile_size = 256\n",
     "\n",
     "# dictionary with all layers\n",
     "type_mask='ground_truth_std'\n",
@@ -25198,13 +25222,18 @@
     "# check for correctness\n",
     "dsc.data_dic\n",
     "\n",
+    "# get data set size\n",
+    "datasetsize = len(os.listdir(path_out + type_mask))\n",
+    "if tile_size == 256:\n",
+    "    datasetsize *= 4\n",
+    "\n",
     "# set output path\n",
-    "path_hdf5 = path_out_dir + 'dataset/dataset_{}_{}.h5'.format(tile_size, region_name)\n",
+    "path_hdf5 = path_out_dir + 'dataset/dataset_{}_df_{}.h5'.format(tile_size, region_name)\n",
     "\n",
     "if not os.path.isfile(path_hdf5):\n",
     "    print('file not found -> creating file')\n",
     "    # create new hdf5 file\n",
-    "    dsc.create_hdf5(path_hdf5, tile_size=256, dataset_size=datasetsize, sort=True)\n",
+    "    dsc.create_hdf5(path_hdf5, tile_size=tile_size, dataset_size=datasetsize)\n",
     "    \n",
     "# set hdf5 file\n",
     "dsc.set_hdf5(path_hdf5)\n",
@@ -25214,11 +25243,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "4000\n",
+      "1000 2000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "8000\n",
+      "2000 3000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "12000\n",
+      "3000 4000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "16000\n",
+      "4000 5000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "20000\n",
+      "5000 6000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "24000\n",
+      "6000 7000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "28000\n",
+      "7000 8000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "32000\n",
+      "8000 9000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "36000\n",
+      "9000 10000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "40000\n",
+      "10000 11000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "44000\n",
+      "11000 12000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "48000\n",
+      "12000 13000\n",
+      "(1000, 512, 512, 4)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "(1000, 512, 512, 1)\n",
+      "52000\n",
+      "13000 13112\n",
+      "(112, 512, 512, 4)\n",
+      "(112, 512, 512, 1)\n",
+      "(112, 512, 512, 1)\n",
+      "(112, 512, 512, 1)\n",
+      "(112, 512, 512, 1)\n",
+      "52448\n",
+      "finished\n"
+     ]
+    }
+   ],
    "source": [
-    "dsc.add_dataset_to_hdf5(idxs, block_size=1000, start_index=0, sort=False, type_mask=type_mask)"
+    "dsc.add_dataset_to_hdf5(block_size=1000, start_index=0, sort=True, type_mask=type_mask)"
    ]
   },
   {
@@ -25230,14 +25367,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate stats\n",
-    "\n",
-    "# add stats"
+    "stats = DatasetStats(path_out)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "ortho\n",
+      "[1.6899519790011692]\n",
+      "[0.7143389126973533]\n",
+      "--------------------------------------------------\n",
+      "dsm\n",
+      "[1.6899519790011692]\n",
+      "[0.7143389126973533]\n",
+      "--------------------------------------------------\n",
+      "dtm\n",
+      "[1.6899519790011692]\n",
+      "[0.7143389126973533]\n",
+      "--------------------------------------------------\n",
+      "slope\n",
+      "[1.6899519790011692]\n",
+      "[0.7143389126973533]\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = 0\n",
+    "end = 52448\n",
+    "\n",
+    "hdf5_ds = h5py.File(path_hdf5, 'a')\n",
+    "\n",
+    "for key in data_dic:\n",
+    "    print('--------------------------------------------------')\n",
+    "    \n",
+    "    if (len(key) >= 12) & (key[:12] == 'ground_truth'):\n",
+    "        next\n",
+    "        \n",
+    "    else:\n",
+    "        print(key)\n",
+    "\n",
+    "        bands = 4 if key == 'ortho' else 1\n",
+    "\n",
+    "        mean = stats.calc_mean(dset=hdf5_ds, data_type=key, start_index=start, end_index=end, block_size=5000, bands=bands)\n",
+    "        hdf5_ds[key].attrs['mean'] = np.array(mean, dtype='float32')\n",
+    "        print(mean)\n",
+    "\n",
+    "        std = stats.calc_std(mean, dset=hdf5_ds, data_type=key, start=start, end=end, block_size=1000, bands=bands, scaler=1000)\n",
+    "        hdf5_ds[key].attrs['sd'] = np.array(std, dtype='float32')\n",
+    "        print(std)\n",
+    "    \n",
+    "hdf5_ds.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "dsm\n",
+      "[12.516656]\n",
+      "[11.372374]\n",
+      "--------------------------------------------------\n",
+      "dtm\n",
+      "[1114.45]\n",
+      "[423.64557]\n",
+      "--------------------------------------------------\n",
+      "ortho\n",
+      "[ 60.863323  72.35534   69.92986  125.11735 ]\n",
+      "[34.208652 33.542694 32.19669  57.6727  ]\n",
+      "--------------------------------------------------\n",
+      "slope\n",
+      "[25.992702]\n",
+      "[13.158367]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check \n",
+    "\n",
+    "# open \n",
+    "hdf5_ds = h5py.File(path_hdf5, 'r')\n",
+    "\n",
+    "for key in hdf5_ds.keys():\n",
+    "    \n",
+    "    if (len(key) >= 12) & (key[:12] == 'ground_truth'):\n",
+    "        next\n",
+    "    else:\n",
+    "        print('--------------------------------------------------')\n",
+    "        print(key)\n",
+    "        print(hdf5_ds[key].attrs['mean'])\n",
+    "        print(hdf5_ds[key].attrs['sd'])\n",
+    "\n",
+    "hdf5_ds.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
