--- a/prepare_data_.ipynb
+++ b/prepare_data_.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -27238,13 +27238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'ortho': {'dtype': <class 'numpy.uint8'>, 'dim': 4}, 'dsm': {'dtype': <class 'numpy.float16'>, 'dim': 1}, 'dtm': {'dtype': <class 'numpy.float16'>, 'dim': 1}, 'slope': {'dtype': <class 'numpy.float16'>, 'dim': 1}, 'ground_truth_std': {'dtype': <class 'numpy.uint8'>, 'dim': 1}}\n",
       "data set size = 172824\n",
       "file not found -> creating file\n"
      ]
@@ -27255,7 +27256,7 @@
        "'/mnt/data_2/dataset/dataset_256_df.h5'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27287,14 +27288,14 @@
     "# get data set size\n",
     "# ! --------------------------------------------------!\n",
     "#datasetsize = len(os.listdir(path_out + type_mask))\n",
-    "datasetsize = 43206\n",
+    "datasetsize = 43206 #- 8811\n",
     "\n",
     "if tile_size == 256:\n",
     "    datasetsize *= 4\n",
     "print('data set size = {}'.format(datasetsize))\n",
     "    \n",
     "# set output path\n",
-    "path_hdf5 = path_out_dir + 'dataset/dataset_{}_df_{}.h5'.format(tile_size, region_name)\n",
+    "path_hdf5 = path_out_dir + 'dataset/dataset_{}_df.h5'.format(tile_size,)#region_name)\n",
     "\n",
     "if not os.path.isfile(path_hdf5):\n",
     "    print('file not found -> creating file')\n",
@@ -27309,7 +27310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -27324,98 +27325,98 @@
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "107156\n",
+      "124376\n",
       "1000 2000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "111156\n",
+      "128376\n",
       "2000 3000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "115156\n",
+      "132376\n",
       "3000 4000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "119156\n",
+      "136376\n",
       "4000 5000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "123156\n",
+      "140376\n",
       "5000 6000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "127156\n",
+      "144376\n",
       "6000 7000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "131156\n",
+      "148376\n",
       "7000 8000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "135156\n",
+      "152376\n",
       "8000 9000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "139156\n",
+      "156376\n",
       "9000 10000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "143156\n",
+      "160376\n",
       "10000 11000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "147156\n",
+      "164376\n",
       "11000 12000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "151156\n",
+      "168376\n",
       "12000 13000\n",
       "(1000, 512, 512, 4)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
       "(1000, 512, 512, 1)\n",
-      "155156\n",
+      "172376\n",
       "13000 13112\n",
       "(112, 512, 512, 4)\n",
       "(112, 512, 512, 1)\n",
       "(112, 512, 512, 1)\n",
       "(112, 512, 512, 1)\n",
       "(112, 512, 512, 1)\n",
-      "155604\n",
+      "172824\n",
       "finished\n"
      ]
     }
@@ -27424,7 +27425,7 @@
     "# 2018_tamsweg, 2017_mariazell, 2017_traun, 2018_pinzgau\n",
     "\n",
     "dsc.set_input_dir('/mnt/data_2/2018_pinzgau/')\n",
-    "dsc.add_dataset_to_hdf5(block_size=1000, start_index=103156, sort=True, type_mask=type_mask)"
+    "dsc.add_dataset_to_hdf5(block_size=1000, start_index=120376, sort=True, type_mask=type_mask)"
    ]
   },
   {
